test/Harper/Tests/Bad/DataMethodTypeHintWithoutDefinition.har
value HelloWorld = {
    data = {
      name :: String;
    }
    sayHello :: String;
  };